--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         Want more details
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="wrapper">
+      <p id="adding-section">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id='new-task'class="task" type="text">
