--- a/index.html
+++ b/index.html
@@ -6,49 +6,49 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <body>
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details
       </a>
     </div>
     <div class="wrapper">
       <p id="adding-section">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="item-label">Add Item</label>
         <div class="task-row-wrapper">
           <input id='new-task'class="task" type="text">
-          <button>Add</button>
+          <button class="button-add">Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
+      <ul id="incomplete-tasks" class="control-list">
+        <li class="control-list-item">
+          <input type="checkbox" class="input-checkbox">
+          <label class="task item-label">Pay Bills</label>
+          <input type="text" class="input-text">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="button-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+        <li class="control-list-item edit-mode">
+          <input type="checkbox" class="input-checkbox">
+          <label class="task item-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-text">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="button-img" src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+      <ul id="completed-tasks" class="control-list">
+        <li class="control-list-item">
+          <input type="checkbox" class="input-checkbox" checked>
+          <label class="task item-label">See the Doctor</label>
+          <input type="text" class="task input-text">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="button-img" src="./remove.svg">
           </button>
         </li>
       </ul>
