--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="header">
       <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
-        Want more details
+        Want more details?
       </a>
     </div>
     <div class="wrapper">
