refactor: add alt attribute for img according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <body>
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" 
+           src="./eisenhower-matrix.jpg"
+           alt="The Eisenhower Matrix. How to make decisions on what's urgent and important.">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
@@ -28,7 +30,7 @@
             <input type="text" class="input-text">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img class="button-img" src="./remove.svg">
+              <img class="button-img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="control-list-item edit-mode">
@@ -37,7 +39,7 @@
             <input type="text" value="Go Shopping" class="task input-text">
             <button class="edit">Save</button>
             <button class="delete">
-              <img class="button-img" src="./remove.svg">
+              <img class="button-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -51,7 +53,7 @@
             <input type="text" class="task input-text">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img class="button-img" src="./remove.svg">
+              <img class="button-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
