--- a/index.html
+++ b/index.html
@@ -6,54 +6,54 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <body>
     <header class="header">
-      <img class="header-img" 
+      <img class="header__img" 
            src="./eisenhower-matrix.jpg"
            alt="The Eisenhower Matrix. How to make decisions on what's urgent and important.">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </header>
-    <main class="wrapper">
-      <section id="adding-section">
-        <label for="new-task" class="item-label">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id='new-task'class="task" type="text">
-          <button class="button-add">Add</button>
+    <main class="main">
+      <section class="adding-section">
+        <label for="new-task" class="label adding-section__label">Add Item</label>
+        <div class="add-wrapper">
+          <input class="input add-wrapper__input-text task_stretched" type="text">
+          <button class="button add-wrapper__button">Add</button>
         </div>
       </section>
-      <h3>Todo</h3>
-      <section class="todo">
-        <ul id="incomplete-tasks" class="control-list">
-          <li class="control-list-item">
-            <input type="checkbox" class="input-checkbox">
-            <label class="task item-label">Pay Bills</label>
-            <input type="text" class="input-text">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img class="button-img" src="./remove.svg" alt="">
+      <h3 class="main__heading">Todo</h3>
+      <section class="todo-section">
+        <ul class="tasks-list incomlete-tasks">
+          <li class="task-line">
+            <input type="checkbox" class="task-line__checkbox">
+            <label class="task-line__label task_stretched">Pay Bills</label>
+            <input type="text" class="input task-line__input">
+            <button class="button task-line__button-edit">Edit</button>
+            <button class="button button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
-          <li class="control-list-item edit-mode">
-            <input type="checkbox" class="input-checkbox">
-            <label class="task item-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task input-text">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img class="button-img" src="./remove.svg" alt="">
+          <li class="task-line task_edit_mode">
+            <input type="checkbox" class="task-line__checkbox">
+            <label class="task-line__label task_stretched">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input task-line__input task_stretched">
+            <button class="button task-line__button-edit">Save</button>
+            <button class="button button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
       </section>
-      <section class="completed">
-        <h3>Completed</h3>
-        <ul id="completed-tasks" class="control-list">
-          <li class="control-list-item">
-            <input type="checkbox" class="input-checkbox" checked>
-            <label class="task item-label">See the Doctor</label>
-            <input type="text" class="task input-text">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img class="button-img" src="./remove.svg" alt="">
+      <h3 class="main__heading">Completed</h3>
+      <section class="completed-section">
+        <ul class="tasks-list completed-tasks">
+          <li class="task-line">
+            <input type="checkbox" class="task-line__checkbox" checked>
+            <label class="task-line__label task_stretched">See the Doctor</label>
+            <input type="text" class="input task-line__input task_stretched">
+            <button class="button task-line__button-edit">Edit</button>
+            <button class="button button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
